--- a/src/Project/Habitat/code/App_Config/Environment/Project/Habitat.Dev.config
+++ b/src/Project/Habitat/code/App_Config/Environment/Project/Habitat.Dev.config
@@ -2,7 +2,7 @@
 
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
     <sitecore>
-        <sc.variable name="sourceFolder" value="C:\Habitat91\src" />
+        <sc.variable name="sourceFolder" value="C:\Agent\_work\1\s" />
         <sites role:require="Standalone">
             <site name="habitat">
                 <patch:attribute name="database">master</patch:attribute>
