--- a/src/Project/Habitat/code/App_Config/Include/Project/Habitat.Website.config
+++ b/src/Project/Habitat/code/App_Config/Include/Project/Habitat.Website.config
@@ -35,7 +35,7 @@
         </events>
         <sites>
             <site name="habitat" patch:after="site[@name='modules_website']" 
-                  targetHostName="habitat91.$(rootHostName)" 
+                  targetHostName="habitat.$(rootHostName)" 
                   database="web" 
                   virtualFolder="/" 
                   physicalFolder="/" 
